<resources>
    <!-- Root -->
    <string name="app_name">Wordbox_Roberto</string>
    <!-- Util -->
    <string name="no_internet_connection_error">
        Internet connection its necessary to load the information
    </string>
    <!-- Person list -->
    <string name="empty_persons_list">Not available persons to show</string>
    <!-- Person details -->
    <string name="person_profile">%1$s\'s profile</string>
    <string name="email">Email</string>
    <!-- Aux -->
    <string name="transition_iv_photo">TransitionPhoto</string>
    <string name="person_list">Available persons</string>
    <string name="try_again">Try again</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
</resources>
